feat(engine): host the worker-fork verbs — audit/format/publish/image/import leave the client (slim-client wave 2)
The six CLI-side plugin-worker fork sites move into the engine, which
forks workers under its shared HeapPlan. One coherent wire shape (the
single-goal vocabulary) instead of six protocols:

- Requests: audit/format/publish/image/import/provision-request;
  repeated structured events (audit-finding, format-file with
  index/total, import-note); goal-finish variants carry each verb's
  summary (format's --check exit rides as data, preserving exact
  exit-code parity); provision-request is one-shot (no goal events).
- jk mvn / jk gradle: hosted *provisioning* (compat-bridge download/
  link fork), client-side *exec* — a foreign build's TTY, prompts and
  Ctrl-C belong to the user's terminal.
- Interactivity pre-flights client-side: publish resolves repository
  credentials and GPG passphrase in the client and they ride the
  request over the user-owned socket (never logged); import's source
  detection and overwrite refusal stay client-side.
- Goal assembly extracted to engine-side {Audit,Format,Publish,Image,
  Compat}Goals + a shared WorkerCommands fork helper; the same
  factories serve the jk.test.noEngine in-process test path.
- Engine-side text is plain per the rendering rule (ImageGoals'
  multiple-main-classes error no longer embeds client theming).
- Self-host hardening: kernel/engine jk.toml test-worker-jars gains
  the auditor (the new hosted-audit round-trip test forks a real
  worker inside the self-hosted build; first smoke exposed a
  mutual-wait hang on build-error, fixed on both sides).

Validated: full suite green; self-host smoke engine-hosted — build
8/8, audit (real OSV) clean, format --check exit 1 with stamps
working, import pom.xml with fidelity report; engine heap ≤28 MiB
used throughout.